# rust-zero2prod

./: .dockerignore  .env  Cargo.toml  DockerFile  config.toml  configuration.yaml  sqlx-data.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20241115014221_create_subscriptions_table.sql  20241206010027_make_status_not_null_in_subscriptions.sql  20241206011544_creat_subscription_tokens_table.sql  20241210012704_create_users_table.sql  20241210152621_add_salt_to_users.sql  20241211011706_remove_salt_from_users.sql  20241215120233_seed_user.sql  20241216151308_create_idempotency_table.sql  20241217084252_create_newsletter_issues_table.sql  20241217085342_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: mod.rs  new_subcriber.rs  subcriber_email.rs  subcriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: health_check.rs  mod.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  mod.rs  post.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  login.html  post.rs
src/routes/newsletter/: post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
